<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/portfolio_title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp" />

    <Button
        style="@style/app_button"
        android:text="@string/spotify_button"
        android:id="@+id/spotify"
        android:onClick="openSpotify" />

    <Button
            style="@style/app_button"
            android:text="@string/scores_button"
            android:id="@+id/scores"
            android:onClick="openScores" />

        <Button
            style="@style/app_button"
            android:text="@string/library_button"
            android:id="@+id/library"
            android:onClick="openLibrary" />

        <Button
            style="@style/app_button"
            android:text="@string/bigger_button"
            android:id="@+id/bigger"
            android:onClick="openBigger" />

        <Button
            style="@style/app_button"
            android:text="@string/xyz_button"
            android:id="@+id/xyz"
            android:onClick="openXYZ" />

        <Button
            style="@style/app_button"
            android:text="@string/capstone_button"
            android:id="@+id/capstone"
            android:onClick="openCapstone" />
</LinearLayout>
